5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1573_1332.log
== TEST (2019-03-25 14:49:51) 
-- CODE:
aresta = 5cm
area = A
 
print(round(A, 4))
-- ERROR:
File "XXXX", line 1
    aresta = 5cm
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:49:59) 
-- CODE:
aresta = 5 cm
area = A
 
print(round(A, 4))
-- ERROR:
File "XXXX", line 1
    aresta = 5 cm
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:50:02) 
-- CODE:
aresta = 5 cm
area = A
 
print(round(A, 4))
-- EXECUTION TIME:
0.18805
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 1
    aresta = 5 cm
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:50:09) 
-- CODE:
aresta = a
area = A
 
print(round(A, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    aresta = a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:50:26) 
-- CODE:
aresta =a
area =A
 
print(round(A, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    aresta =a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:50:51) 
-- CODE:
aresta =5cm
area =A
 
print(round(A, 4))
-- ERROR:
File "XXXX", line 1
    aresta =5cm
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:51:17) 
-- CODE:
aresta =5**6
area =A
 
print(round(A, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =A
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:53:00) 
-- CODE:
aresta =5**6
area = A
 
print(round(A, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = A
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
